Alpha 1.3_rc Update

--- a/uvn_mod/localisation/russian/SQR_l_russian.yml
+++ b/uvn_mod/localisation/russian/SQR_l_russian.yml
@@ -16,4 +16,100 @@
  rwlship_distribute_start:0 "Начнётся строительство военных верфей"
  rwlship_invest_in_company_start:0 "Верфи будут оптимизированы"
 
+ SQR_CHE_relation:0 "Улучшить отношения с Чейджоу"
+ SQR_CHE_relation_desc:0 "В Чейджоу идёт война с терроризмом, и в такой критический момент мы должны их поддержать, несмотря на то, что они, мягко говоря, странная нация."
+ SQR_KIN_relation:0 "Улучшить отношения с ДРК"
+ SQR_KIN_relation_desc:0 "Кинда - надёжный, демократический и верный союзник, с которым нам и нужно строить отношения. Только отношения с ними принесут нашим нациям пользу!"
+ SQR_tymur_sleep:0 "Отдых Тимура"
+ SQR_tymur_sleep_desc:0 "Наш великий лидер, Tymur Slyva, за всё это время устал управлять государством. Пусть он отдохнёт некоторое время, а мы назначим временное правительство!"
+ SQR_SGK_war:0 "Вторжение в ВГК"
+ SQR_SGK_war_desc:0 "Богданленд, который однажды оккупировал всю территорию Sqr United, теперь не на своих прежних позициях. И если мы хотим сохранить независимость и честь Sqr United, мы обязаны нанести финальный аккорд по террористам из ВГК!"
+ SQR_SGK_sanctions:0 "Ввести санкции против ВГК"
+ SQR_SGK_sanctions_desc:0 "Ужасные новости из ВГК, где людей заживо убивают \"из-за заражения вирусом\" пугают наше национальное сознание. Мы должны немедленно ввести санкции против тирана!"
+ SQR_atom:0 "Строительство АЭС"
+ SQR_atom_desc:0 "САЭС, великая электростанция, которую знает весь мир, уже давно не может полностью обеспечивать всю нашу территорию. Мы должны построить множество АЭС для более эффективной энергосистемы!"
+ SQR_kill_kirill:0 "Убить Кирилла"
+ SQR_kill_kirill_desc:0 "Кирилл Тишков - опасный и кровожадный тиран, которого нужно прикончить раньше, чем он прикончит нас."
+ SQR_DAF_war:0 "Вторжение в Дафию"
+ SQR_DAF_war_desc:0 "Дафия - страна, в которой подавляется инакомыслие и всякая свобода личности. Мы должны срочно принести туда демократию!"
+ SQR_kirill_resistance:0 "Кирилловщина"
+ SQR_kirill_resistance_desc:0 "Кирилловцы во главе с Кириллом Тишковым уже давно подготавливают бунт против нас. Мы должны либо победить, либо умереть."
+ SQR_DAF_sanctions:0 "Ввести санкции против Дафии"
+ SQR_DAF_sanctions_desc:0 "В Дафии подавляется инакомыслие и свобода слова, и мы должны решительно принять меры! В разумных рамках, разумеется."
+ SQR_REA_relation:0 "Улучшить отношения с Страной Реальности"
+ SQR_REA_relation_desc:0 "Страна Реальности - наш самый верный и близкий союзник, с которым нам необходимо продолжать улучшение отношений."
+ SQR_DUS_sanctions:0 "Ввести санкции против Дусибурга"
+ SQR_DUS_sanctions_desc:0 "Агрессивная внешняя политика из Дусибурга печалит и пугает наш народ. А раз так, мы должны защитить наши национальные интересы и ввести санкции против Дусибурга."
+ SQR_exit_uvco:0 "Покинуть ООВГ"
+ SQR_exit_uvco_desc:0 "ООВГ - та организация, которая деградирует с каждым днём. Мы предложим Стране Реальности совместно выйти из ООВГ. Уверены, за этим решением последуют и другие государства."
+ SQR_LUT_sanctions:0 "Ввести санкции против Лютерании"
+ SQR_LUT_sanctions_desc:0 "Лютерания ведёт агрессивную политику в отношении доступа к Датским проливам, что нарушает наши национальные интересы и побуждает на решительные действия."
+ SQR_REA_faction:0 "Союз с Страной Реальности"
+ SQR_REA_faction_desc:0 "Нам нужны союзники, и одним из таких, безусловно, должна стать Страна Реальности - наш самый главный и верный друг. С ними мы преодолеем все наши проблемы!"
+ SQR_DUS_war:0 "Вторжение в Дусибург"
+ SQR_DUS_war_desc:0 "Дусибурская Республика, которая только устраивает войны по всему миру, должно наконец получить заслуженное наказание за все свои злодеяния."
+ SQR_AFR_colonization:0 "Колонизация Африки"
+ SQR_AFR_colonization_desc:0 "Sqr United всегда был обделён в плане колониальной политики, но сейчас, когда все мировые державы ослабли, мы сможем отхватить неплохой кусочек африканской земли."
+ SQR_new_politics:0 "Перестановки в правительстве"
+ SQR_new_politics_desc:0 "Ксения, глава нашего МВД, слишком сильно влияет на нашего мудрого лидера. Она должна исчезнуть во благо нашей нации!"
+ SQR_fascist_resistance:0 "Фашисткий ветер"
+ SQR_fascist_resistance_desc:0 "Кроме Кирилловцев, в нашем государстве есть множество неофашистов, которые готовы взять власть в свои руки. Мы должны сразиться с ними в смертельном бою!"
+ SQR_REA_incident:0 "Инцидент в Волсаше"
+ SQR_REA_incident_desc:0 "Один из наших старых кораблей посетил Волсашовскую бухту. Надеемся, это не доставит нам проблем..."
+ SQR_REA_destroy_flet:0 "Уничтожить ВМФ Страны Реальности"
+ SQR_REA_destroy_flet_desc:0 "Сделав достаточно простую афёру, мы сможем лишить нашего возможного противника на море почти всего своего флота. Что может быть лучше?"
+ SQR_tymur_adventure:0 "Путешествие Тимура"
+ SQR_tymur_adventure_desc:0 "Наш гордый лидер, Tymur Slyva, снова отправился в охоту по берегам морей. Надеемся, связь с ним не оборвётся..."
+ SQR_LUT_war:0 "Вторжение в Лютеранию"
+ SQR_LUT_war_desc:0 "Мы должны не можем выдерживать агрессивной политики Лютерании по отношению к Датским проливам, и мы должны принять решительные меры против этого!"
+ SQR_increase_power:0 "Увеличить власть"
+ SQR_increase_power_desc:0 "В нашей стране наблюдаются проблемы с демократией, и мы считаем, что их увеличение придёт нам только на пользу."
+ SQR_capture_BRS:0 "Вторжение в Браславию"
+ SQR_capture_BRS_desc:0 "Это недееспособное государство не может существовать на карте мира, нам нужно восполнить этот пробел."
+ SQR_kill_tymur:0 "Убить Тимура"
+ SQR_kill_tymur_desc:0 "Наш лидер, Tymur Slyva, уже не первый раз заявляет, что наша политика \"слишком агрессивна\". Если он действительно так считает, он должен умереть. Только лучшие управляют лучшей страной."
+ SQR_fascist_revolution:0 "Фашисткая революция"
+ SQR_fascist_revolution_desc:0 "Настало время, когда Sqr United выбрал свой истинный путь. Слава нашей великой нации!"
+
  SQR_tymur_slyva:0 "Tymur Slyva"
+ SQR_kseniya_simachova:0 "Ксения Симачова"
+
+ great_traveller:0 "Великий путешественник"
+ maritime_genius:0 "Морской гений"
+
+ SQR_uvco_member:0 "Член ООВГ"
+ SQR_uvco_member_desc:0 "Членство в ООВГ ограничивает нас во многих действиях на мировом форуме. Нам нужно создать аналог этой организации."
+ SQR_sea_idea:0 "Морской флот Sqr United"
+ SQR_sea_idea_desc:0 "Наш ВМФ можно считать по-праву одним из сильнейших в мире, и это определённо даёт нам преимущества."
+ SQR_tymur_depression:0 "Депрессия Тимура"
+ SQR_tymur_depression_desc:0 "Наш лидер слишком плохого мнения о себе, и это отражается на нашей нации. Мы должны доказать Тимуру обратное!"
+ SQR_travellers:0 "Страна путешественников"
+ SQR_travellers_desc:0 "Наша любовь к путешествиям, безусловно, имеет свои неплохие плюсы, которыми мы можем воспользоваться."
+ SQR_fire_revolution:0 "Пожар Революции"
+ SQR_fire_revolution_desc:0 "Sqr United горит в огне революции и готовится к новым вызовам. Мы должны отстоять нашу демократию, даже если она не совсем демократична!"
+ SQR_provisional_goverment:0 "Временное правительство Sqr United"
+ SQR_provisional_goverment_desc:0 "В связи с усталостью нашего президента, мы вынуждены сформировать временное правительство на месяц. Безусловно, временный президент не сможет эффективно управлять нашим государством."
+
+ sqr_united.1.t:0 "Усталость президента"
+ sqr_united.1.d:0 "На прошедших днях президент Sqr United Tymur Slyva заявил, что временно уходит в отставку в связи с долгой усталостью. Он заявляет, что ему нужен отдых, иначе он \"долго не протянет\". Ксения Симачова поддержала эту позицию и стала временным президентом Sqr United. Пока Тимур отдыхает у себя дома, мы вынуждены сформировать временное правительство."
+ sqr_united.1.a:0 "Отдохни, наш великий лидер!"
+
+ sqr_united.2.t:0 "Tymur Slyva отдохнул!"
+ sqr_united.2.d:0 "Спустя месяц, как и ожидалось, Tymur Slyva полностью пришёл в себя. Теперь он снова на политической сцене и готов вернуться на свою должность."
+ sqr_united.2.a:0 "Слава Royal Walstein Line!"
+ sqr_united.2.b:0 "Знаете, наверное ему нужно ещё отдохнуть..."
+ 
+ news.1029.t:0 "Временное правительство Sqr United"
+ news.1029.d:0 "На днях рейс лидер Sqr United Tymur Slyva заявил, что \"он устал и ему нужно отдохнуть\". Судя по всему, это действительно так - лидер страны выглядит так, словно он не спал ночами, хотя, возможно, так и есть. Он на месяц покинул пост президента, однако вскоре пообещал вернуться. Пока же страной управляет временное правительство."
+ news.1029.a:0 "Удачи на отдыхе, Tymur Slyva!"
+
+ news.1030.t:0 "Tymur Slyva возвращается к власти"
+ news.1030.d:0 "Прошёл месяц с момента объявления Тимура о своём отпуске, и лидер Sqr United вернулся к своим обязанностям. Он обещает, что продолжит свою прежнюю политику, и заявил, что \"убить Sqr United невозможно\""
+ news.1030.a:0 "За работу, братья!"
+ news.1030.e:0 "Видно, что он отдохнул."
+
+ news.1031.t:0 "Ксения Симачова захватывает власть"
+ news.1031.d:0 "Прошёл месяц с момента объявления Тимура о своём отпуске, и лидер Sqr United хотел вернуться к своим обязанностям, на что получил отказ от временного правительства, заявив, что \"он ещё недостаточно отдохнул\". Затем Ксения подписала указ о выдаче себе должности президента, кое-го поддержал парламент. Теперь Ксения Симачова является лидером Sqr United."
+ news.1031.a:0 "А где минусы?"
+ news.1031.e:0 "Вот она, типичная \"демократия\"."
+
