--- a/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/uvn_mod/localisation/russian/countries_cosmetic_l_russian.yml
@@ -272,6 +272,32 @@
  ANI_communism_DEF:0 "Социалистическая Анигара"
  ANI_communism_ADJ:0 "Анигарск."
 
+ CHE_neutrality:0 "Чейджоу"
+ CHE_neutrality_DEF:0 "Чейджоу"
+ CHE_neutrality_ADJ:0 "Чейджойск."
+ CHE_fascism:0 "Великая Чейджоу"
+ CHE_fascism_DEF:0 "Великая Чейджоу"
+ CHE_fascism_ADJ:0 "Чейджойск."
+ CHE_democratic:0 "Республика Чейджоу"
+ CHE_democratic_DEF:0 "Республика Чейджоу"
+ CHE_democratic_ADJ:0 "Чейджойск."
+ CHE_communism:0 "Социалистическая Чейджоу"
+ CHE_communism_DEF:0 "Социалистическая Чейджоу"
+ CHE_communism_ADJ:0 "Чейджойск."
+
+ DAF_neutrality:0 "Дафия"
+ DAF_neutrality_DEF:0 "Дафия"
+ DAF_neutrality_ADJ:0 "Дафийск."
+ DAF_fascism:0 "Великая Дафия"
+ DAF_fascism_DEF:0 "Великая Дафия"
+ DAF_fascism_ADJ:0 "ЧейджоДафийскйск."
+ DAF_democratic:0 "Республика Дафия"
+ DAF_democratic_DEF:0 "Республика Дафия"
+ DAF_democratic_ADJ:0 "Дафийск."
+ DAF_communism:0 "Социалистическая Дафия"
+ DAF_communism_DEF:0 "Социалистическая Дафия"
+ DAF_communism_ADJ:0 "Дафийск."
+
  VIC_uvn:0 "Вступление в ОВН"
  VIC_uvn_desc:0 "Вступление в ОВН."
  VIC_capital:0 "Основать столицу"
