--- a/uvn_mod/localisation/russian/state_names_l_russian.yml
+++ b/uvn_mod/localisation/russian/state_names_l_russian.yml
@@ -525,7 +525,7 @@
  STATE_522:0 "Западная Австралия"
  STATE_523:1 "Сугомия"
  STATE_524:0 "Тайвань"
- STATE_525:0 "Южная Корея"
+ STATE_525:0 "Чейджоу"
  STATE_526:0 "Окинава"
  STATE_527:0 "Пхеньян"
  STATE_528:0 "Кюсю"
@@ -910,3 +910,5 @@
  STATE_907:0 "Каир"
  STATE_908:0 "Афар"
  STATE_909:0 "Волсаш"
+ STATE_910:0 "Эписон"
+
