--- a/uvn_mod/localisation/russian/victory_points_l_russian.yml
+++ b/uvn_mod/localisation/russian/victory_points_l_russian.yml
@@ -205,7 +205,6 @@
  VICTORY_POINTS_525:0 "Киев"
  VICTORY_POINTS_3529:0 "Альба"
  VICTORY_POINTS_3151:0 "Панк-Сектербург"
- VICTORY_POINTS_6474:0 "Йанктон"
  VICTORY_POINTS_9417:0 "Ростов"
  VICTORY_POINTS_11375:1 "Горький"
  VICTORY_POINTS_117:0 "Новгород"
@@ -228,7 +227,6 @@
  VICTORY_POINTS_3580:0 "Курск"
  VICTORY_POINTS_3653:0 "Батуми"
  VICTORY_POINTS_3672:0 "Грозный"
- VICTORY_POINTS_705:0 "Евпаград"
  VICTORY_POINTS_3720:1 "Майкоп"
  VICTORY_POINTS_4724:0 "Красноярск"
  VICTORY_POINTS_4797:0 "Иркутск"
@@ -595,14 +593,12 @@
  VICTORY_POINTS_12883:0 "Джидда"
  VICTORY_POINTS_12991:1 "Могадишо"
  VICTORY_POINTS_6318:0 "Манчестер"
- VICTORY_POINTS_6595:0 "Скотланд"
  VICTORY_POINTS_11561:0 "Кривой Рог"
  VICTORY_POINTS_9461:0 "Луганск"
  VICTORY_POINTS_3734:0 "Краснодар"
  VICTORY_POINTS_11349:0 "Ржев"
  VICTORY_POINTS_8011:0 "Бангалор"
  VICTORY_POINTS_8087:0 "Хайдарабад"
- VICTORY_POINTS_11929:0 "Усть-Сусольск"
  VICTORY_POINTS_4516:0 "Патна"
  VICTORY_POINTS_12137:0 "Лакхнау"
  VICTORY_POINTS_9292:0 "Челябинск"
@@ -1112,9 +1108,20 @@
  VICTORY_POINTS_9780:0 "Шкодра"
  VICTORY_POINTS_6900:0 "Корча"
  VICTORY_POINTS_6680:0 "Лихтенштейн"
- VICTORY_POINTS_6420:0 "Волсаш"
 
-#VICTORIO CITIES(ADDED)
+#Country of Reality
+
+ VICTORY_POINTS_6420:0 "Волсаш"
+ VICTORY_POINTS_6474:0 "Тихомерск"
+ VICTORY_POINTS_6595:0 "Скотланд"
+ VICTORY_POINTS_705:0 "Евпаград"
+ VICTORY_POINTS_11929:0 "Усть-Сусольск"
+ 
+# Dafia
+
+ VICTORY_POINTS_7221:0 "Эписон"
+
+# Victorio
 
  VICTORY_POINTS_4623:0 "Трали"
  VICTORY_POINTS_7304:0 "Спрингфилд"
