Alpha 1.3 Sqr Update

--- a/uvn_mod/localisation/russian/SQR_l_russian.yml
+++ b/uvn_mod/localisation/russian/SQR_l_russian.yml
@@ -89,6 +89,16 @@
  SQR_fire_revolution_desc:0 "Sqr United горит в огне революции и готовится к новым вызовам. Мы должны отстоять нашу демократию, даже если она не совсем демократична!"
  SQR_provisional_goverment:0 "Временное правительство Sqr United"
  SQR_provisional_goverment_desc:0 "В связи с усталостью нашего президента, мы вынуждены сформировать временное правительство на месяц. Безусловно, временный президент не сможет эффективно управлять нашим государством."
+ SQR_atom_idea:0 "Постройки АЭС"
+ SQR_atom_idea_desc:0 "Благодаря нашим мощным АЭС, вся наша великая страна обеспечивается достаточным количеством электроэнергии, что эффективно влияет на наше производство и экономику в целом."
+ SQR_sanctions_against_other:0 "Экономические санкции"
+ SQR_sanctions_against_other_desc:0 "Одно из государств наложило на нас свои экономические санкции, что привело к ряду проблем в нашей экономике."
+ SQR_uvn_member:0 "Член ОВН"
+ SQR_uvn_member_desc:0 "Являясь членом ОВН, мы сможем наконец сконцентрироваться на дипломатии и сотрудничать со всеми странами мира."
+
+ SQR_SGK_sanctions_diplomacy:0 "Экономические санкции"
+
+ SQR_REA_pact_faction:0 "Морской союз"
 
  sqr_united.1.t:0 "Усталость президента"
  sqr_united.1.d:0 "На прошедших днях президент Sqr United Tymur Slyva заявил, что временно уходит в отставку в связи с долгой усталостью. Он заявляет, что ему нужен отдых, иначе он \"долго не протянет\". Ксения Симачова поддержала эту позицию и стала временным президентом Sqr United. Пока Тимур отдыхает у себя дома, мы вынуждены сформировать временное правительство."
@@ -98,6 +108,30 @@
  sqr_united.2.d:0 "Спустя месяц, как и ожидалось, Tymur Slyva полностью пришёл в себя. Теперь он снова на политической сцене и готов вернуться на свою должность."
  sqr_united.2.a:0 "Слава Royal Walstein Line!"
  sqr_united.2.b:0 "Знаете, наверное ему нужно ещё отдохнуть..."
+
+ sqr_united.3.t:0 "Sqr United предлагает пакт"
+ sqr_united.3.d:0 "Sqr United, наш верный союзник, предложила нам подписать морской союз, который заключатся в военном альянсе, совместном сотрудничестве и развитии. Безусловно, это выгодное предложение, но что скажет наш глава?"
+ sqr_united.3.a:0 "Это отличное предложение!"
+ sqr_united.3.b:0 "Интересно, но как-нибудь в другой раз."
+ sqr_united.4.t:0 "Страна Реальности отвергает пакт!"
+ sqr_united.4.d:0 "СРовское правительство заявило, что \"Sqr United - наш верный союзник, но мы пока-что не готовы к полноценному альянсу\". Фактически, наше предложение было отвергнуто."
+ sqr_united.4.a:0 "Не очень-то мы и хотели этого альянса."
+ sqr_united.5.t:0 "Страна Реальности подписывает пакт!"
+ sqr_united.5.d:0 "Страна Реальности заявила, что \"Sqr United всегда была нашим верным союзником, и мы должны были давно законодательно это постановить\". Теперь мы будем сражаться вместе."
+ sqr_united.5.a:0 "Слава Sqr United и Стране Реальности!"
+
+ sqr_united.6.t:0 "Корабль Sqr United вторгся в наши морские воды!"
+ sqr_united.6.d:0 "Один из неизвестных кораблей недавно вторгся в Волсашовскую бухту и даже её обстрелял. Корабль удалось задержать, на борту был найден Tymur Slyva. Он сказал, что \"ошибся\", и \"атаковал не тех\"."
+ sqr_united.6.a:0 "Нет причин ему не доверять."
+ sqr_united.6.b:0 "Это отговорки, пора готовиться к войне."
+
+ sqr_united.7.t:0 "Корабль Sqr United вторгся в наши морские воды!"
+ sqr_united.7.d:0 "Один из неизвестных кораблей недавно вторгся в Волсашовскую бухту и даже её обстрелял. В ходе этого инцидента было уничтожено множество кораблей военно-морского флота Страны Реальности, пока лидер Sqr United, Tymur Slyva, был явно доволен этими событиями."
+ sqr_united.7.a:0 "Похоже, кто-то себя слишком сильно переоценил."
+
+ sqr_united.8.t:0 "Морская экспедиция Tymur Slyva"
+ sqr_united.8.d:0 "Во время своего очередного путешествия, наш великий лидер Tymur Slyva пропал в неизвестном направлении. Его уже ищут службы Sqr United и ФСБ СР, но однако, пока безуспешно. Мы можем потерять нашего лидера..."
+ sqr_united.8.a:0 "Немедленно направить спасательную операцию!"
  
  news.1029.t:0 "Временное правительство Sqr United"
  news.1029.d:0 "На днях рейс лидер Sqr United Tymur Slyva заявил, что \"он устал и ему нужно отдохнуть\". Судя по всему, это действительно так - лидер страны выглядит так, словно он не спал ночами, хотя, возможно, так и есть. Он на месяц покинул пост президента, однако вскоре пообещал вернуться. Пока же страной управляет временное правительство."
@@ -112,4 +146,50 @@
  news.1031.d:0 "Прошёл месяц с момента объявления Тимура о своём отпуске, и лидер Sqr United хотел вернуться к своим обязанностям, на что получил отказ от временного правительства, заявив, что \"он ещё недостаточно отдохнул\". Затем Ксения подписала указ о выдаче себе должности президента, кое-го поддержал парламент. Теперь Ксения Симачова является лидером Sqr United."
  news.1031.a:0 "А где минусы?"
  news.1031.e:0 "Вот она, типичная \"демократия\"."
+
+ news.1032.t:0 "Казнь Кирилла Тишкова"
+ news.1032.d:0 "Из Скречова пришли новые вести - в Sqr United Кирилла Тишкова казнили за многочисленные преступления. На казни присутствовал также президент Страны Реальности. Кирилл был обвинён во многих статьях, в том числе и за госизмену."
+ news.1032.a:0 "Преступники!"
+ news.1032.b:0 "Безумец в могиле."
+
+ news.1033.t:0 "Восстание Тишкова"
+ news.1033.d:0 "Из Скречова пришли страшные вести - известный миллитарист и оппозиционер Кирилл Тишков объявил о начале восстания в стране. Мятежникам удалось взять под контроль ряд населённых пунтов. Чего же стоит ждать народу Sqr United?"
+ news.1033.a:0 "Преступники!"
+ news.1033.b:0 "Безумец в могиле."
+
+ news.1034.t:0 "Sqr United и СР подписывают пакт"
+ news.1034.d:0 "Сегодня парламенты Sqr United и Страны Реальности официально ратифицировали договор о создании морского союза - фактически, создав собственный военный альянс. Неизвестно, что затевают обе державы - оборону, либо же агрессивные нападения. Ясно одно - в Европе появился новый игрок на мировой арене."
+ news.1034.a:0 "Это настораживает..."
+ news.1034.e:0 "Слава морскому союзу!"
+
+ news.1035.t:0 "Восстание фашистов"
+ news.1035.d:0 "Из Скречова пришли ещё более страшные вести - на этот раз в стране восстали фашисты, которые провозгласили Скречовский Рейх. Сообщается, что фашистам удалось взять под контроль ядерный арсенал страны, и они уже пытались направить ядерные ракеты на Страну Реальности и другие государства. Весь мир замер."
+ news.1035.a:0 "Сколько у них там ещё будет восстаний?"
+ news.1035.b:0 "Наши парни работают."
+
+ news.1036.t:0 "Инцидент в Волсаше."
+ news.1036.d:0 "На днях один из кораблей Sqr United вторгся в морские воды Страны Реальности и смог пробраться к Волсашовской бухте, обстреляв город. Лидер Sqr United заявил, что \"это была ошибка\". Независимо от всего этого, обе державы решили забыть о конфлите, а Sqr United выделило деньги для восстановления Волсаша и своего корабля."
+ news.1036.a:0 "Мы живём прямо как в книге \"1984\" Джорджа Оруэлла..."
+ news.1036.b:0 "Мы слишком умны, чтобы воевать по пустякам."
+
+ news.1037.t:0 "Инцидент в Волсаше."
+ news.1037.d:0 "На днях один из кораблей Sqr United вторгся в морские воды Страны Реальности и смог пробраться к Волсашовской бухте, обстреляв город. Лидер Sqr United заявил, что \"это была ошибка\". Независимо от всего этого, Страна Реальности уже заявила, что это было \"чуть ли не объявлением войны\". Похоже, скоро Страна Реальности примет решительные меры против своего собственного союзника."
+ news.1037.a:0 "Два дебила - это сила."
+ news.1037.b:0 "Кто-то из нас слишком высокого мнения о себе."
+
+ news.1038.t:0 "Инцидент в Волсаше."
+ news.1038.d:0 "На днях один из кораблей Sqr United вторгся в морские воды Страны Реальности и смог пробраться к Волсашовской бухте, обстреляв город. Лидер Sqr United заявил, что искренне доволен увиденным, ведь теперь \"Sqr United - единственная морская держава этого мира\". Впрочем, лидер Страны Реальности уже заявил, что примет решительные меры."
+ news.1038.a:0 "Принесите попкорн, пожалуйста."
+ news.1038.b:0 "Настало время финального морского сражения."
+
+ news.1039.t:0 "Пропажа Tymur Slyva"
+ news.1039.d:0 "Уже несколько дней была потеряна связь с лидером Sqr United. Сообщается, что ФСБ СР и спецслужбы Sqr United начали полномасштабную спасательную операцию лидера республики. В конечном счёте, им удалось найти Tymur Slyva, и его доставили в Скречов."
+ news.1039.a:0 "Хорошо, что всё обошлось!"
+ news.1039.b:0 "Мы стали более мудрее."
+
+ news.1040.t:0 "Убийство Tymur Slyva!"
+ news.1040.d:0 "Сообщается, что сегодня в Скречове в результате покушения скончался великий её лидер - Tymur Slyva. Этот человек основал как саму страну, так и её флот, а также легендарную Royal Walstein Line. Эксперты считают, что фашисты причастны к этому очевидно политическому убийству."
+ news.1040.a:0 "Фашистов нужно запретить!"
+ news.1040.b:0 "Малолетний дебил умер."
+
 
