Focuses of SQR and ANI, per SQR and ANI, regions SQR

--- a/uvn_mod/localisation/russian/SQR_l_russian.yml
+++ b/uvn_mod/localisation/russian/SQR_l_russian.yml
@@ -73,6 +73,17 @@
 
  SQR_tymur_slyva:0 "Tymur Slyva"
  SQR_kseniya_simachova:0 "Ксения Симачова"
+ SQR_alexander_burakov:0 "Александр Бураков"
+ SQR_aleksei_tigrov:0 "Алексей Тигров"
+ SQR_james_norrington:0 "Джеймс Норрингтон"
+ SQR_gillette_johnson:0 "Джиллетт Джонсон"
+ SQR_theodore_groves:0 "Теодор Грувс"
+ SQR_george_davenport:0 "Джордж Давенпорт"
+ SQR_james_smith:0 "Джеймс Смит"
+ SQR_john_scarfield:0 "Джон Скарфильд"
+ SQR_alexander_volokhov:0 "Александр Волохов"
+ SQR_theory_tymur_slyva:0 "Tymur Slyva"
+ SQR_jack_lopez:0 "Джек Лопез"
 
  great_traveller:0 "Великий путешественник"
  maritime_genius:0 "Морской гений"
